# psilo

./: .gitignore  Makefile  README.md  cata.sl  index.html  makedoc.sh  psilo.cabal  stack.yaml  test.sl  test2.sl
app/: Main.hs
css/: jumbotron-narrow.css  style.css
doc/: Makefile  makedoc.sh
doc/html/src/: evaluator.html  main.html
doc/templates/: main.tmpl.html  src.tmpl.html
doc/tex/: evaluator.tex  lexer.tex  main.tex  parser.tex  readme.tex  syntax.tex
eg/: Y.sl  arith.sl  list.sl  mappair1.sl  mappair2.sl  nat.sl  vector.sl
src/: Evaluator.hs  Evaluator.lhs  Lexer.hs  Lexer.lhs  Lib.hs  Main.hs  Main.lhs  Parser.hs  Parser.lhs  Syntax.hs  Syntax.lhs  Test.hs  TypeCheck.hs  Typechecker.hs  Typechecker.lhs  evaluator.html  index.html  lexer.html  main.html  parser.html  syntax.html  typechecker.html
src/Lib/: Codegen.hs  Compiler.hs  Errors.hs  FileEval.hs  Interpreter.hs  Machine.hs  Parser.hs  Preprocessor.hs  REPL.hs  Runtime.hs  Syntax.hs  Types.hs  Util.hs
src/Lib/Compiler/: Preprocessor.hs  StackVM.hs
src/Lib/Compiler/StackVM/: Codegen.hs  Machine.hs
src/Lib/Machine/: Stack.hs
src/Lib/Syntax/: Annotated.hs  Core.hs  Lifted.hs  Surface.hs  Symbol.hs  TopLevel.hs
src/Lib/Types/: Assump.hs  Class.hs  Constraint.hs  Frame.hs  Infer.hs  Kind.hs  Pred.hs  PredMap.hs  Qual.hs  Scheme.hs  Solve.hs  Subst.hs  TIMonad.hs  Type.hs  TypeCheck.hs  TypeEnv.hs  TypeError.hs  TypeLike.hs  Unify.hs
