name:                psilo
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/psilo#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Lib.Parser, Lib.Runtime, Lib.Syntax,
                       Lib.Interpreter, Lib.REPL, Lib.FileEval
  build-depends:       base >= 4.7 && < 5,
                       tubes,
                       comonad,
                       mtl,
                       transformers,
                       free,
                       containers,
                       haskeline,
                       attoparsec,
                       text,
                       bytestring
  default-language:    Haskell2010

executable psilo-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , psilo
                     , optparse-applicative
  default-language:    Haskell2010

test-suite psilo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , psilo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/psilo
